# ReadVocab

./: CMakeLists.txt  README.md  aitextgenerator.cpp  aitextgenerator.h  fastreviewwidget.cpp  fastreviewwidget.h  learnnewwidget.cpp  learnnewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  relatepage.cpp  relatepage.h  reviewsituationwidget.cpp  reviewsituationwidget.h  reviewwidget.cpp  reviewwidget.h  scenariomodewidget.cpp  scenariomodewidget.h  wordbookwidget.cpp  wordbookwidget.h  wordlistwidget.cpp  wordlistwidget.h
lib/: cet4.db  cet6.db  gre.db  ielts.db  ky.db  toefl.db  vocabulary.db
src/: aitextgenerator.cpp  aitextgenerator.h  fastmodewidget.cpp  fastmodewidget.h  fastreviewwidget.cpp  fastreviewwidget.h  learnnewwidget.cpp  learnnewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryhelper.cpp  memoryhelper.h  relatepage.cpp  relatepage.h  reviewsituationwidget.cpp  reviewsituationwidget.h  reviewwidget.cpp  reviewwidget.h  scenariomodewidget.cpp  scenariomodewidget.h  wordbookmanager.cpp  wordbookmanager.h  wordbookwidget.cpp  wordbookwidget.h  wordlistwidget.cpp  wordlistwidget.h  wordrelaterwidget.cpp  wordrelaterwidget.h
tools/: generate_wordbooks.py
wordlearner/: CMakeLists.txt  fastmodewidget.cpp  fastmodewidget.h  learnnewwidget.cpp  learnpage.cpp  learnpage.h  main.cpp  mainwindow.cpp  mainwindow.h  scenariomodewidget.cpp  scenariomodewidget.h  wordlistwidget.cpp  wordlistwidget.h  wordrelaterwidget.cpp  wordrelaterwidget.h
